# OKVIS_Chinese_annotation

./: .gitignore  CMakeLists.txt  README.md
cmake/: CeresConfig.cmake  FindCXSparse.cmake  FindEigen.cmake  FindGlog.cmake  FindSuiteSparse.cmake  FindVISensor.cmake
cmake/opengv/: CMakeLists.txt
okvis_apps/src/: okvis_app_synchronous.cpp
okvis_ceres/: CMakeLists.txt
okvis_ceres/src/: Estimator.cpp  HomogeneousPointError.cpp  HomogeneousPointLocalParameterization.cpp  HomogeneousPointParameterBlock.cpp  IdProvider.cpp  ImuError.cpp  LocalParamizationAdditionalInterfaces.cpp  Map.cpp  MarginalizationError.cpp  PoseError.cpp  PoseLocalParameterization.cpp  PoseParameterBlock.cpp  RelativePoseError.cpp  SpeedAndBiasError.cpp  SpeedAndBiasParameterBlock.cpp
okvis_ceres/test/: TestEstimator.cpp  TestHomogeneousPointError.cpp  TestImuError.cpp  TestMap.cpp  TestMarginalization.cpp  TestReprojectionError.cpp  test_main.cpp
okvis_common/: CMakeLists.txt
okvis_common/src/: VioInterface.cpp  VioParametersReader.cpp
okvis_cv/: CMakeLists.txt
okvis_cv/src/: CameraBase.cpp  NCameraSystem.cpp
okvis_cv/test/: TestFrame.cpp  TestMultiFrame.cpp  TestNCameraSystem.cpp  (+1 more)
okvis_frontend/: CMakeLists.txt
okvis_kinematics/: CMakeLists.txt
okvis_matcher/: CMakeLists.txt
okvis_multisensor_processing/: CMakeLists.txt
okvis_time/: CMakeLists.txt
okvis_time/include/okvis/: Duration.hpp  Time.hpp
okvis_time/include/okvis/implementation/: Duration.hpp  Time.hpp
okvis_time/src/: Duration.cpp  Time.cpp
okvis_timing/: CMakeLists.txt
okvis_util/: CMakeLists.txt
(+104 files in other folders)
